# GRmap-server

./: .gitignore  envtest.py  main.py  pyproject.toml  requirements.txt
firebase/: backup.json  cp_db.py  db_operate.py
gcs/: get_signed_url.py  test.py
my_types/: main.py
